Tela cadastro finalizada

--- a/Tela cadastro/cadastro.html
+++ b/Tela cadastro/cadastro.html
@@ -27,16 +27,16 @@
                 <label for="senha">Senha</label>
                 <div class="campo-senha">
                     <input type="password" id="senha" placeholder="Digite sua senha" required>
-                        <img class="iconeOlho" src="assets/eye.svg" alt="" id="icone-olho" onclick="OcultarSenha()">
-                        <img class="iconeOlhoSlash" src="assets/eye-slash.svg" alt="" id="icone-olho-slash" onclick="OcultarSenha(); return false">
+                        <img class="iconeOlho" src="assets/eye.svg" alt="" id="iconeOlho" onclick="OcultarSenha()">
+                        <img class="iconeOlhoSlash" src="assets/eye-slash.svg" alt="" id="iconeOlhoSlash" onclick="OcultarSenha(); return false">
                 </div>
 
 
-                <label for="senha">Confirmar senha</label>
+                <label for="senhaConfirm">Confirmar senha</label>
                 <div class="campo-senha">
                     <input type="password" id="confirmarSenha" placeholder="Digite sua senha" required>
-                        <img class="iconeOlho" src="assets/eye.svg" alt="" id="icone-olho" onclick="OcultarSenha()">
-                        <img class="iconeOlhoSlash" src="assets/eye-slash.svg" alt="" id="icone-olho-slash" onclick="OcultarSenha(); return false">
+                        <img class="iconeOlhoConfirm" src="assets/eye.svg" alt="" id="iconeOlhoConfirm" onclick="OcultarSenhaConfirm()">
+                        <img class="iconeOlhoSlashConfirm" src="assets/eye-slash.svg" alt="" id="iconeOlhoSlashConfirm" onclick="OcultarSenhaConfirm(); return false">
                 </div>
 
                 <div class="lembrar-usuario">
