Alterações na home

--- a/Tela home/index.html
+++ b/Tela home/index.html
@@ -47,7 +47,7 @@
                 <ul>
                     <li><a href="index.html" class="active"><i class="fas fa-home"></i> Home</a></li>
                     <li><a href="seguindo.html"><i class="fas fa-users"></i> Seguindo</a></li>
-                    <li><a href="perfil.html"><i class="fas fa-user"></i> Perfil</a></li>
+                    <li><a href=""><i class="fas fa-user"></i> Perfil</a></li>
                 </ul>
             </nav>
             <div class="following-section">
@@ -103,14 +103,12 @@
             <section class="movie-carousel">
                 <h2 class="section-title">Em destaque</h2>
                 <div class="carousel-content-wrapper">
+                    <button class="carousel-arrow prev"><i class="fas fa-chevron-left"></i></button>
                     <div class="carousel-container">
                         <div class="movie-card">
                             <img src="Styles.css/Sinners.jpg" alt="Poster do filme Pecadores" class="movie-poster">
-                            <h3 class="movie-title">Pecadores</h3>
-                            <div class="movie-meta">
-                                <div class="imdb-rating">
-                                    <span>7.6</span>
-                                </div>
+                            <div class="movie-info">
+                                <h3 class="movie-title">Pecadores</h3>
                                 <div class="movie-rating-icons">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -118,15 +116,13 @@
                                     <i class="fas fa-star-half-alt"></i>
                                     <i class="far fa-star"></i>
                                 </div>
+                                <p class="movie-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor.</p>
                             </div>
                         </div>
                         <div class="movie-card">
                             <img src="Styles.css/F1.jpg" alt="Poster do filme F1: O Filme" class="movie-poster">
-                            <h3 class="movie-title">F1: O Filme</h3>
-                            <div class="movie-meta">
-                                <div class="imdb-rating">
-                                    <span>7.8</span>
-                                </div>
+                            <div class="movie-info">
+                                <h3 class="movie-title">F1: O Filme</h3>
                                 <div class="movie-rating-icons">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -134,15 +130,13 @@
                                     <i class="fas fa-star"></i>
                                     <i class="far fa-star"></i>
                                 </div>
+                                <p class="movie-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor.</p>
                             </div>
                         </div>
                         <div class="movie-card">
                             <img src="Styles.css/Bailarina.png" alt="Poster do filme Bailarina" class="movie-poster">
-                            <h3 class="movie-title">Bailarina</h3>
-                            <div class="movie-meta">
-                                <div class="imdb-rating">
-                                    <span>6.9</span>
-                                </div>
+                            <div class="movie-info">
+                                <h3 class="movie-title">Bailarina</h3>
                                 <div class="movie-rating-icons">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -150,16 +144,14 @@
                                     <i class="far fa-star"></i>
                                     <i class="far fa-star"></i>
                                 </div>
+                                <p class="movie-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor.</p>
                             </div>
                         </div>
                         <div class="movie-card">
                             <img src="Styles.css/Demonslayer.jpg" alt="Poster do filme Demonslayer"
                                 class="movie-poster">
-                            <h3 class="movie-title">Demon Slayer : Infinity Castle</h3>
-                            <div class="movie-meta">
-                                <div class="imdb-rating">
-                                    <span>8.7</span>
-                                </div>
+                            <div class="movie-info">
+                                <h3 class="movie-title">Demon Slayer : Infinity Castle</h3>
                                 <div class="movie-rating-icons">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -167,17 +159,15 @@
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star-half-alt"></i>
                                 </div>
+                                <p class="movie-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor.</p>
                             </div>
                         </div>
 
                         <div class="movie-card">
                             <img src="Styles.css/Demonslayer.jpg" alt="Poster do filme Demonslayer"
                                 class="movie-poster">
-                            <h3 class="movie-title">Demon Slayer : Infinity Castle</h3>
-                            <div class="movie-meta">
-                                <div class="imdb-rating">
-                                    <span>8.7</span>
-                                </div>
+                            <div class="movie-info">
+                                <h3 class="movie-title">Demon Slayer : Infinity Castle</h3>
                                 <div class="movie-rating-icons">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -185,12 +175,42 @@
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star-half-alt"></i>
                                 </div>
+                                <p class="movie-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor.</p>
                             </div>
                         </div>
+
+                        <div class="movie-card">
+                            <img src="Styles.css/Bailarina.png" alt="Poster do filme Bailarina" class="movie-poster">
+                            <div class="movie-info">
+                                <h3 class="movie-title">Bailarina</h3>
+                                <div class="movie-rating-icons">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="far fa-star"></i>
+                                    <i class="far fa-star"></i>
+                                </div>
+                                <p class="movie-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor.</p>
+                            </div>
+                        </div>
+
+                        <div class="movie-card">
+                            <img src="Styles.css/Sinners.jpg" alt="Poster do filme Pecadores" class="movie-poster">
+                            <div class="movie-info">
+                                <h3 class="movie-title">Pecadores</h3>
+                                <div class="movie-rating-icons">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star-half-alt"></i>
+                                    <i class="far fa-star"></i>
+                                </div>
+                                <p class="movie-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor.</p>
+                            </div>
+                        </div>
+
                     </div>
-                    <div class="carousel-progress-bar">
-                        <div class="progress-bar-inner"></div>
-                    </div>
+                    <button class="carousel-arrow next"><i class="fas fa-chevron-right"></i></button>
                 </div>
             </section>
 
@@ -237,6 +257,8 @@
                             </div>
                         </div>
                     </div>
+                    
+                    
                 </div>
             </section>
 
@@ -249,3 +271,4 @@
 </body>
 
 </html>
+
