:wrench: Modificacoes painel perfil

--- a/Tela Perfil/index.html
+++ b/Tela Perfil/index.html
@@ -103,9 +103,19 @@
                         <p class="nome">User</p>
                     </div>
                     <div class="itens-perfil">
-                        <p class="infoUser">Seguidores</p>
-                        <p class="infoUser">Seguindo</p>
-                        <p class="infoUser">Avaliações</p>
+                        <div class="info">
+                            <p class="infoUser">Seguidores</p>
+                            <p class="numero">99</p>
+                        </div>
+                        <div class="info">
+                            <p class="infoUser">Seguindo</p>
+                            <p class="numero">25</p>
+                        </div>
+                        
+                        <div class="info">
+                            <p class="infoUser">Avaliações</p>
+                            <p class="numero">33</p>
+                        </div>
                     </div>
                     <button class="editar-perfil">
                         editar perfil
@@ -119,7 +129,8 @@
                 <div class="review-card">
                     <div class="review-header">
                         <div class="review-user-info">
-                            <img src="https://placehold.co/50x50/e0e0e0/000?text=U" alt="Avatar do usuário" class="review-user-avatar">
+                            <img src="https://placehold.co/50x50/e0e0e0/000?text=U" alt="Avatar do usuário"
+                                class="review-user-avatar">
                             <div>
                                 <span class="review-user-name">User</span>
                                 <span class="review-user-profile-link">Ver perfil</span>
@@ -132,20 +143,25 @@
                         <div class="review-content">
                             <h3 class="review-movie-title">Como Treinar o Seu Dragão</h3>
                             <div class="review-movie-rating">
-                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
+                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                    class="fas fa-star"></i><i class="far fa-star"></i>
                             </div>
                             <p class="review-text">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has been the industry's standard dummy text ever since the 1500s, when an unknown
+                                printer took a galley of type and scrambled it to make a type specimen book. It has
+                                survived not only five centuries, but also the leap into electronic typesetting.
                             </p>
                         </div>
                     </div>
                 </div>
 
                 <!-- Card de Resenha 2 -->
-                 <div class="review-card">
+                <div class="review-card">
                     <div class="review-header">
                         <div class="review-user-info">
-                            <img src="https://placehold.co/50x50/e0e0e0/000?text=U" alt="Avatar do usuário" class="review-user-avatar">
+                            <img src="https://placehold.co/50x50/e0e0e0/000?text=U" alt="Avatar do usuário"
+                                class="review-user-avatar">
                             <div>
                                 <span class="review-user-name">User</span>
                                 <span class="review-user-profile-link">Ver perfil</span>
@@ -158,20 +174,25 @@
                         <div class="review-content">
                             <h3 class="review-movie-title">Como Treinar o Seu Dragão</h3>
                             <div class="review-movie-rating">
-                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
+                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                    class="fas fa-star"></i><i class="far fa-star"></i>
                             </div>
                             <p class="review-text">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has been the industry's standard dummy text ever since the 1500s, when an unknown
+                                printer took a galley of type and scrambled it to make a type specimen book. It has
+                                survived not only five centuries, but also the leap into electronic typesetting.
                             </p>
                         </div>
                     </div>
                 </div>
 
                 <!-- Card de Resenha 3 -->
-                 <div class="review-card">
+                <div class="review-card">
                     <div class="review-header">
                         <div class="review-user-info">
-                            <img src="https://placehold.co/50x50/e0e0e0/000?text=U" alt="Avatar do usuário" class="review-user-avatar">
+                            <img src="https://placehold.co/50x50/e0e0e0/000?text=U" alt="Avatar do usuário"
+                                class="review-user-avatar">
                             <div>
                                 <span class="review-user-name">User</span>
                                 <span class="review-user-profile-link">Ver perfil</span>
@@ -184,20 +205,25 @@
                         <div class="review-content">
                             <h3 class="review-movie-title">Como Treinar o Seu Dragão</h3>
                             <div class="review-movie-rating">
-                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
+                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                    class="fas fa-star"></i><i class="far fa-star"></i>
                             </div>
                             <p class="review-text">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has been the industry's standard dummy text ever since the 1500s, when an unknown
+                                printer took a galley of type and scrambled it to make a type specimen book. It has
+                                survived not only five centuries, but also the leap into electronic typesetting.
                             </p>
                         </div>
                     </div>
                 </div>
 
-                 <!-- Card de Resenha 4 -->
-                 <div class="review-card">
+                <!-- Card de Resenha 4 -->
+                <div class="review-card">
                     <div class="review-header">
                         <div class="review-user-info">
-                            <img src="https://placehold.co/50x50/e0e0e0/000?text=U" alt="Avatar do usuário" class="review-user-avatar">
+                            <img src="https://placehold.co/50x50/e0e0e0/000?text=U" alt="Avatar do usuário"
+                                class="review-user-avatar">
                             <div>
                                 <span class="review-user-name">User</span>
                                 <span class="review-user-profile-link">Ver perfil</span>
@@ -210,18 +236,22 @@
                         <div class="review-content">
                             <h3 class="review-movie-title">Como Treinar o Seu Dragão</h3>
                             <div class="review-movie-rating">
-                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
+                                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                    class="fas fa-star"></i><i class="far fa-star"></i>
                             </div>
                             <p class="review-text">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has been the industry's standard dummy text ever since the 1500s, when an unknown
+                                printer took a galley of type and scrambled it to make a type specimen book. It has
+                                survived not only five centuries, but also the leap into electronic typesetting.
                             </p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        
-        </div>
+
+    </div>
     </div>
 </body>
 
