Finalização da responsividade mobile

--- a/Tela cadastro/cadastro.html
+++ b/Tela cadastro/cadastro.html
@@ -17,71 +17,54 @@
         <!-- LADO ESQUERDO -->
         <section class="lado-esquerdo">
 
-<<<<<<< HEAD
-            <section class="fazerCadastro">
-                <header class="topo">
-                    <h1 class="titulo">Faça seu cadastro</h1>
-                </header>
+            <div class="efeitoMobile">
+                <section class="fazerCadastro">
+                    <header class="topo">
+                        <h1 class="titulo">Faça seu cadastro</h1>
+                    </header>
 
-                <form class="forms-cadastro">
-                    <label for="email">E-mail</label>
-                    <input type="email" id="email" placeholder="Digite seu e-mail" required>
+                    <form class="forms-cadastro">
+                        <label for="email">E-mail</label>
+                        <input type="email" id="email" placeholder="Digite seu e-mail" required>
 
-                    <label for="senha">Senha</label>
-                    <div class="campo-senha">
-                        <input type="password" id="senha" placeholder="Digite sua senha" required>
-                        <img class="iconeOlho" src="assets/eye.svg" alt="" id="icone-olho" onclick="OcultarSenha()">
-                        <img class="iconeOlhoSlash" src="assets/eye-slash.svg" alt="" id="icone-olho-slash"
-                            onclick="OcultarSenha(); return false">
-                    </div>
-
-
-                    <label for="senha">Confirmar senha</label>
-                    <div class="campo-senha">
-                        <input type="password" id="confirmarSenha" placeholder="Digite sua senha" required>
-                        <img class="iconeOlho" src="assets/eye.svg" alt="" id="icone-olho" onclick="OcultarSenha()">
-                        <img class="iconeOlhoSlash" src="assets/eye-slash.svg" alt="" id="icone-olho-slash"
-                            onclick="OcultarSenha(); return false">
-                    </div>
-=======
-            <form class="forms-cadastro">
-                <label for="email">E-mail</label>
-                <input type="email" id="email" placeholder="Digite seu e-mail" required>
-                
-                <label for="senha">Senha</label>
-                <div class="campo-senha">
-                    <input type="password" id="senha" placeholder="Digite sua senha" required>
-                        <img class="iconeOlho" src="assets/eye.svg" alt="" id="iconeOlho" onclick="OcultarSenha()">
-                        <img class="iconeOlhoSlash" src="assets/eye-slash.svg" alt="" id="iconeOlhoSlash" onclick="OcultarSenha(); return false">
-                </div>
+                        <label for="senha">Senha</label>
+                        <div class="campo-senha">
+                            <input type="password" id="senha" placeholder="Digite sua senha" required>
+                            <img class="iconeOlho" src="assets/eye.svg" alt="" id="iconeOlho" onclick="OcultarSenha()">
+                            <img class="iconeOlhoSlash" src="assets/eye-slash.svg" alt="" id="iconeOlhoSlash"
+                                onclick="OcultarSenha(); return false">
+                        </div>
 
 
-                <label for="senhaConfirm">Confirmar senha</label>
-                <div class="campo-senha">
-                    <input type="password" id="confirmarSenha" placeholder="Digite sua senha" required>
-                        <img class="iconeOlhoConfirm" src="assets/eye.svg" alt="" id="iconeOlhoConfirm" onclick="OcultarSenhaConfirm()">
-                        <img class="iconeOlhoSlashConfirm" src="assets/eye-slash.svg" alt="" id="iconeOlhoSlashConfirm" onclick="OcultarSenhaConfirm(); return false">
-                </div>
->>>>>>> ca9b02f097b406e4b437af87d2e6d05b4080d444
+                        <label for="senhaConfirm">Confirmar senha</label>
+                        <div class="campo-senha">
+                            <input type="password" id="confirmarSenha" placeholder="Digite sua senha" required>
+                            <img class="iconeOlhoConfirm" src="assets/eye.svg" alt="" id="iconeOlhoConfirm"
+                                onclick="OcultarSenhaConfirm()">
+                            <img class="iconeOlhoSlashConfirm" src="assets/eye-slash.svg" alt=""
+                                id="iconeOlhoSlashConfirm" onclick="OcultarSenhaConfirm(); return false">
+                        </div>
 
-                    <div class="lembrar-usuario">
-                        <input type="checkbox" class="check-lembrar">
-                        <p class="texto-lembrar">Lembrar de mim</p>
-                    </div>
+                        <div class="lembrar-usuario">
+                            <input type="checkbox" class="check-lembrar">
+                            <p class="texto-lembrar">Lembrar de mim</p>
+                        </div>
 
-                    <button class="botao-registrar">Registrar</button>
+                        <button class="botao-registrar">Registrar</button>
 
-                    <p class="possui-conta">Já tem uma conta? <span class="fazer-login"><a href="">Faça login</a></span>
-                    </p>
+                        <p class="possui-conta">Já tem uma conta? <span class="fazer-login"><a href="">Faça
+                                    login</a></span>
+                        </p>
 
-                    <div class="botoes-sociais">
-                        <img src="assets/Botao-google.svg" alt="Botão de link do google" width="35%">
-                        <img src="assets/botao-face.svg" alt="Botão de link do facebook" width="35%">
-                    </div>
+                        <div class="botoes-sociais">
+                            <img src="assets/Botao-google.svg" alt="Botão de link do google" width="35%">
+                            <img src="assets/botao-face.svg" alt="Botão de link do facebook" width="35%">
+                        </div>
 
 
-                </form>
-            </section>
+                    </form>
+                </section>
+            </div>
         </section>
 
         <!-- LADO DIREITO -->
