--- a/Tela Seguindo/index.html
+++ b/Tela Seguindo/index.html
@@ -54,7 +54,7 @@
                     <li><a href="perfil.html"><i class="fas fa-user"></i> Perfil</a></li>
                 </ul>
             </nav>
-                        <div class="following-section">
+            <div class="following-section">
                 <div class="following-header">
                     <h3>Seguindo</h3>
                     <span>Assistidos</span>
@@ -120,33 +120,116 @@
                     <div class="review-card">
                         <div class="review-header">
                             <div class="review-user-info">
-                                <img src="https://placehold.co/50x50/e0e0e0/000?text=U" alt="Avatar do usuário" class="review-user-avatar">
+                                <img src="https://placehold.co/50x50/e0e0e0/000?text=U" alt="Avatar do usuário"
+                                    class="review-user-avatar">
                                 <div>
                                     <span class="review-user-name">User</span>
                                     <span class="review-user-profile-link">Ver perfil</span>
                                 </div>
                             </div>
                             <button class="review-btn">Resenha</button>
+                            <dialog id="modalReview">
+                                <button id="closeModal">Fechar Modal</button>
+
+                                <div class="information">
+                                    <div class="information-right">
+                                        <p>Titulo</p>
+                                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                            Lorem
+                                            Ipsum has been the industry's standard dummy text ever since the 1500s, when
+                                            an
+                                            unknown printer took a galley of type and scrambled it to make a type
+                                            specimen book.
+                                            It has survived not only five centuries, but also the leap into electronic
+                                            typesetting.
+                                        </p>
+                                    </div>
+                                    <img src="" alt="">
+                                </div>
+                                <div class="container-actions">
+                                    <div class="card-reviews">
+                                        <div class="card">
+                                            <p>titulo</p>
+                                            <p>4.2</p>
+                                        </div>
+                                        <div class="card">
+                                            <p>titulo</p>
+                                            <p>4.2</p>
+                                        </div>
+                                    </div>
+                                    <div class="button-reviews">
+                                        <button class="revies-actions">Fazer uma nova avaliação</button>
+                                        <button class="revies-actions">Ver avaliações</button>
+                                    </div>
+                                </div>
+                                <div class="container-reviews">
+                                    <p>Ver Mais Avaliações</p>
+                                    <div class="user-reviews">
+                                        <div class="review-card">
+                                            <div class="review-header">
+                                                <div class="review-user-info">
+                                                    <img src="https://placehold.co/50x50/e0e0e0/000?text=U"
+                                                        alt="Avatar do usuário" class="review-user-avatar">
+                                                    <div>
+                                                        <span class="review-user-name">User</span>
+                                                        <span class="review-user-profile-link">Ver perfil</span>
+                                                    </div>
+                                                </div>
+                                                <button class="review-btn">Resenha</button>
+                                            </div>
+                                            <div class="review-body">
+                                                <img src="Styles.css/HTYD.jpg" alt="Poster do filme"
+                                                    class="review-movie-poster">
+                                                <div class="review-content">
+                                                    <h3 class="review-movie-title">Como Treinar o Seu Dragão</h3>
+                                                    <div class="review-movie-rating">
+                                                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                                            class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                                            class="far fa-star"></i>
+                                                    </div>
+                                                    <p class="review-text">
+                                                        Lorem Ipsum is simply dummy text of the printing and typesetting
+                                                        industry. Lorem
+                                                        Ipsum has been the industry's standard dummy text ever since the
+                                                        1500s, when an
+                                                        unknown printer took a galley of type and scrambled it to make a
+                                                        type specimen book.
+                                                        It has survived not only five centuries, but also the leap into
+                                                        electronic
+                                                        typesetting.
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </dialog>
                         </div>
                         <div class="review-body">
                             <img src="Styles.css/HTYD.jpg" alt="Poster do filme" class="review-movie-poster">
                             <div class="review-content">
                                 <h3 class="review-movie-title">Como Treinar o Seu Dragão</h3>
                                 <div class="review-movie-rating">
-                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
+                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                        class="fas fa-star"></i><i class="far fa-star"></i>
                                 </div>
                                 <p class="review-text">
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                    Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                                    unknown printer took a galley of type and scrambled it to make a type specimen book.
+                                    It has survived not only five centuries, but also the leap into electronic
+                                    typesetting.
                                 </p>
                             </div>
                         </div>
                     </div>
 
                     <!-- Card de Resenha 2 -->
-                     <div class="review-card">
+                    <div class="review-card">
                         <div class="review-header">
                             <div class="review-user-info">
-                                <img src="https://placehold.co/50x50/e0e0e0/000?text=U" alt="Avatar do usuário" class="review-user-avatar">
+                                <img src="https://placehold.co/50x50/e0e0e0/000?text=U" alt="Avatar do usuário"
+                                    class="review-user-avatar">
                                 <div>
                                     <span class="review-user-name">User</span>
                                     <span class="review-user-profile-link">Ver perfil</span>
@@ -159,20 +242,26 @@
                             <div class="review-content">
                                 <h3 class="review-movie-title">Como Treinar o Seu Dragão</h3>
                                 <div class="review-movie-rating">
-                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
+                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                        class="fas fa-star"></i><i class="far fa-star"></i>
                                 </div>
                                 <p class="review-text">
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                    Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                                    unknown printer took a galley of type and scrambled it to make a type specimen book.
+                                    It has survived not only five centuries, but also the leap into electronic
+                                    typesetting.
                                 </p>
                             </div>
                         </div>
                     </div>
 
                     <!-- Card de Resenha 3 -->
-                     <div class="review-card">
+                    <div class="review-card">
                         <div class="review-header">
                             <div class="review-user-info">
-                                <img src="https://placehold.co/50x50/e0e0e0/000?text=U" alt="Avatar do usuário" class="review-user-avatar">
+                                <img src="https://placehold.co/50x50/e0e0e0/000?text=U" alt="Avatar do usuário"
+                                    class="review-user-avatar">
                                 <div>
                                     <span class="review-user-name">User</span>
                                     <span class="review-user-profile-link">Ver perfil</span>
@@ -185,20 +274,26 @@
                             <div class="review-content">
                                 <h3 class="review-movie-title">Como Treinar o Seu Dragão</h3>
                                 <div class="review-movie-rating">
-                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
+                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                        class="fas fa-star"></i><i class="far fa-star"></i>
                                 </div>
                                 <p class="review-text">
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                    Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                                    unknown printer took a galley of type and scrambled it to make a type specimen book.
+                                    It has survived not only five centuries, but also the leap into electronic
+                                    typesetting.
                                 </p>
                             </div>
                         </div>
                     </div>
 
-                     <!-- Card de Resenha 4 -->
-                     <div class="review-card">
+                    <!-- Card de Resenha 4 -->
+                    <div class="review-card">
                         <div class="review-header">
                             <div class="review-user-info">
-                                <img src="https://placehold.co/50x50/e0e0e0/000?text=U" alt="Avatar do usuário" class="review-user-avatar">
+                                <img src="https://placehold.co/50x50/e0e0e0/000?text=U" alt="Avatar do usuário"
+                                    class="review-user-avatar">
                                 <div>
                                     <span class="review-user-name">User</span>
                                     <span class="review-user-profile-link">Ver perfil</span>
@@ -211,17 +306,22 @@
                             <div class="review-content">
                                 <h3 class="review-movie-title">Como Treinar o Seu Dragão</h3>
                                 <div class="review-movie-rating">
-                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
+                                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                        class="fas fa-star"></i><i class="far fa-star"></i>
                                 </div>
                                 <p class="review-text">
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                    Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                                    unknown printer took a galley of type and scrambled it to make a type specimen book.
+                                    It has survived not only five centuries, but also the leap into electronic
+                                    typesetting.
                                 </p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            
+
             <!-- Footer adicionado -->
             <footer class="main-footer">
                 <div class="footer-content">
@@ -257,18 +357,18 @@
 
     <!-- Script para o dropdown -->
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
+        document.addEventListener('DOMContentLoaded', function () {
             const userIcon = document.getElementById('user-icon');
             const userDropdown = document.getElementById('user-dropdown');
 
             // Mostra/esconde o dropdown ao clicar no ícone
-            userIcon.addEventListener('click', function(event) {
+            userIcon.addEventListener('click', function (event) {
                 event.stopPropagation(); // Impede que o evento de clique se propague para o window
                 userDropdown.classList.toggle('show');
             });
 
             // Fecha o dropdown se o usuário clicar fora dele
-            window.addEventListener('click', function(event) {
+            window.addEventListener('click', function (event) {
                 // Verifica se o dropdown está visível e se o clique não foi dentro do ícone
                 if (userDropdown.classList.contains('show')) {
                     userDropdown.classList.remove('show');
@@ -277,5 +377,5 @@
         });
     </script>
 </body>
-</html>
 
+</html>
