Correção de erros

--- a/Tela Seguindo/index.html
+++ b/Tela Seguindo/index.html
@@ -52,6 +52,7 @@
                     <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
                     <li><a href="seguindo.html" class="active"><i class="fas fa-users"></i> Seguindo</a></li>
                     <li><a href="perfil.html"><i class="fas fa-user"></i> Perfil</a></li>
+                    <li><a href="destaques.html"><i class="fas fa-film"></i> Filmes em Destaque</a></li>
                 </ul>
             </nav>
             <div class="following-section">
