--- a/Tela Perfil/index.html
+++ b/Tela Perfil/index.html
@@ -45,6 +45,8 @@
                     <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
                     <li><a href="seguindo.html"><i class="fas fa-users"></i> Seguindo</a></li>
                     <li><a href="perfil.html" class="active"><i></i> Perfil</a></li>
+                    <li><a href="destaques.html"><i class="fas fa-film"></i> Filmes em Destaque</a></li>
+
                 </ul>
             </nav>
             <div class="following-section">
