--- a/Tela home/index.html
+++ b/Tela home/index.html
@@ -48,6 +48,8 @@
                     <li><a href="index.html" class="active"><i class="fas fa-home"></i> Home</a></li>
                     <li><a href="seguindo.html"><i class="fas fa-users"></i> Seguindo</a></li>
                     <li><a href=""><i class="fas fa-user"></i> Perfil</a></li>
+                    <li><a href="destaques.html"><i class="fas fa-film"></i> Filmes em Destaque</a></li>
+
                 </ul>
             </nav>
             <div class="following-section">
